# asyncio-uhid-gamepad

./: README.md  pyproject.toml
examples/: local_script.py
src/uhidgamepad/: __init__.py  core.py  descriptor.py
